# PyBallistics

./: README.md  bullet.py  cli.py  environment.py  pyproject.toml  rifle.py  target.py
