[project]
name = "pyballistics"
version = "0.1.0"
description = "A Ballistics Calculator"
authors = [
    {name = "Ethan Cooke",email = "erqury@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
